<resources>
    <string name="app_name">Pitjarus Test</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_keep_username">Keep username</string>
    <string name="label_check_update">Check Update</string>
    <string name="label_login">Login</string>
    <string name="label_app_version_value">App Ver %s</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="label_role_value">Role: %s</string>
    <string name="label_nik_value">NIK: %s</string>
    <string name="label_visit_in_value">Kunjungan pada bulan %s</string>
    <string name="label_total_store">Total\nStore</string>
    <string name="label_actual_store">Actual\nStore</string>
    <string name="label_percentage">Percentage</string>
    <string name="label_menu">Menu</string>
    <string name="label_visit">Kunjungan</string>
    <string name="label_visit_2">Visit</string>
    <string name="label_no_visit">No Visit</string>
    <string name="label_target_install_cdfdpc">Target Install\nCDFDPC</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_transmission_history">Transmission\nHistory</string>
    <string name="label_logout">Logout</string>
    <string name="label_list_store">List Store</string>
    <string name="label_list_visit_date_value">List kunjungan %s</string>
    <string name="label_cluster_value">Cluster: %s</string>
    <string name="label_meter_value">%s m</string>
    <string name="label_kilo_meter_value">%s km</string>
    <string name="label_search_store_or_distributor">Cari Toko/Distributor</string>
    <string name="label_perfect_store">Perfect Store</string>
    <string name="label_store_verification">Verifikasi Store</string>
    <string name="label_reset">Reset</string>
    <string name="label_outlet_type">Tipe Outlet</string>
    <string name="label_display_type">Tipe Display</string>
    <string name="label_display_sub_type">Sub Tipe Display</string>
    <string name="label_ertm">ERTM</string>
    <string name="label_pareto">Pareto</string>
    <string name="label_e_merchandising">E-merchandising</string>
    <string name="label_colon_value">: %s</string>
    <string name="label_last_visit">Last Visit</string>
    <string name="label_location_is_not_suitable">Lokasi belum sesuai</string>
    <string name="label_location_is_suitable">Lokasi sudah sesuai</string>
    <string name="label_yes">Ya</string>
    <string name="label_marquee_repeat">Terima kasih untuk support yang luar biasa di masa-masa covid-19 seperti ini. semoga sehat selalu</string>
    <string name="label_dashboard_store">Dashboard Store</string>
    <string name="label_target">Target</string>
    <string name="label_achievement">Pencapaian</string>
    <string name="label_done">Selesai</string>
    <string name="label_information">Information</string>
    <string name="label_product_check">Product\nCheck</string>
    <string name="label_sku_promo">SKU\nPromo</string>
    <string name="label_oos_summary">Ringkasan\nOOS</string>
    <string name="label_store_investment">Store\nInvestment</string>
    <string name="label_percentage_value">%s</string>
    <string name="label_settings">Pengturan</string>
</resources>