<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:src="@drawable/bg_login_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            style="@style/FormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_circle"
            android:drawablePadding="8dp"
            android:hint="@string/label_username"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/FormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/label_password"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkboxKeepUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue_005EEF"
                android:text="@string/label_keep_username"
                android:textColor="@color/blue_005EEF" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_outline_cloud_download"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/label_check_update"
                android:textColor="@color/blue_005EEF" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/blue_005EEF"
            android:paddingVertical="16dp"
            android:text="@string/label_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/btnLoading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:indeterminate="true"
            android:visibility="gone" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="-16dp"
            android:src="@drawable/bg_login_bottom"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/label_app_version_value"
            android:textColor="@color/grey_9E9E9E"
            android:textSize="16sp" />

    </FrameLayout>

</LinearLayout>